syntax = "proto2";

message PbRabbleUserMsg {
  optional uint64 op = 1;
  optional bool op_complete = 2;
  optional bool get_history = 3;
  optional History history = 4;
}

message History {
  repeated uint64 history = 1;
}